# Rain-of-Colors-CG

./: .gitignore  README  README.md  pyproject.toml  test.py
src/: main.py
src/game/: Main.py
src/game/front_end/: Button.py  Menu.py
src/game/front_end/Componentes/: Background.py  Button.py  Coracoes.py  TelaSuspensa.py  Text.py
src/game/front_end/TelasPrincipais/: Menu.py
src/game/front_end/TelasPrincipais/Estatisticas/: Estatisticas.py  Estatisticas_controller.py  Estatisticas_layout.py
src/game/front_end/TelasPrincipais/GameOver/: GameOver.py  GameOver_controller.py  GameOver_layout.py
src/game/front_end/TelasPrincipais/Jogo/: Jogo.py  Jogo_controller.py  Jogo_layout.py
src/game/front_end/TelasPrincipais/Menu/: Menu.py  Menu_controller.py  Menu_layout.py
src/game/front_end/TelasPrincipais/Pause/: Pause.py  Pause_controller.py  Pause_layout.py
src/game/front_end/helper/: Responsive.py
src/game/scripts/: CheckCollisions.py  GameState.py  Keyboard_Inputs.py  Music_manager.py  Pontuacao.py  Rain.py  VIda.py  rain.py
src/game/scripts/ObjetosdaChuva/: Bomba.py  Coracao.py  Estrela.py  FactoryChuva.py  Gelo.py  Gota.py  Objeto.py
src/game/scripts/player/: Balde.py  Balde_controller.py  balde.py
src/system/clipping/: Cohen-Sutherland.py  Cohen_Sutherland.py
src/system/preenchimento_e_textura/: Preenchimento.py  Texture_Mapping.py  utils.py
src/system/primitivas/: Circulo.py  Curva.py  Elipse.py  GetPixel.py  Linha.py  SetPixel.py
src/system/transformacoes_geometricas/: Janela_Viewport.py  Transformacoes_Geometricas.py
(+3 files in other folders)
