[project]
name = "rainofcollors"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Alexandre",email = "gustavoalexandredg@gmail.com"},
    {name = "Helen ALves", email = "helenalves7384@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
